Some more small changes

--- a/Lab2/lovisastrange_lab2.ipynb
+++ b/Lab2/lovisastrange_lab2.ipynb
@@ -155,14 +155,14 @@
         "id": "l5zMzgPlRAF6"
       },
       "source": [
-        "Iterative methods are methods that compute an approximate solution in each step. Typically, the algorithm runs until a ceratain number of iterations have been made or until an error approximation or similar is small enough. This means that we get a worse approximation if we only let the algorithm run for a few iterations. On the other hand, if the approximate solution does not need to be precise, for example if it will be used as a starting value for another algorithm, they save a lot of computing power that an exact solving method would have to us.\n",
+        "Iterative methods are methods that compute an approximate solution in each step. Typically, the algorithm runs until a ceratain number of iterations have been made or until an error approximation or similar is small enough. This means that we get a worse approximation if we only let the algorithm run for a few iterations. On the other hand, if the approximate solution does not need to be precise, for example if it will be used as a starting value for another algorithm, they save a lot of computing power that an exact solving method would have to use.\n",
         "\n",
         "An iterative method has a rate of convergence $q$ if $$\n",
         "lim_{k \\to \\inf} \\frac{||x-x^{(k+1)}||}{||x-x^{(k)}||^q} = C\n",
         "$$\n",
         "for $C>0.$ The rate of convergence is a mesure on how quickly a method converges, so a large value of $q$ means that it converges more quickly.\n",
         "\n",
-        "It also important to be able to approximate the error of an iterative methods, for example to know when to stop iterating. If the exact solution is known, we can compare the result with the known solution. However, most of the time, the exact solution is not known. Then we can use the residual, which can be computed by putting the computed solution $x^{(k)}$ into the original equation. For a system of equations, we get that $$\n",
+        "It also important to be able to approximate the error of an iterative method, for example to know when to stop iterating. If the exact solution is known, we can compare the result with the known solution. However, most of the time, the exact solution is not known. Then we can use the residual, which can be computed by putting the computed solution $x^{(k)}$ into the original equation. For a system of equations, we get that $$\n",
         "r^{(k)} = b - Ax^{(k)}\n",
         "$$\n",
         "\n",
@@ -184,7 +184,7 @@
         "id": "zF4iBj5VURZx"
       },
       "source": [
-        "One iterative method that can be used for linear systems of equations is Richardson iteration (Ref). It is a form of fixed point iteration, which is a method of the form $$\n",
+        "One iterative method that can be used for linear systems of equations is Richardson iteration (Methods in Computational Science, p.149). It is a form of fixed point iteration (Methods in Computational Science, p.148), which is a method of the form $$\n",
         "x^{(k+1)} = g(x^{(k)}),\n",
         "$$\n",
         "which solves the equation $x = g(x).$ More specifically, we can use a fixed point iteration method for linear systems, where we have $$g(x) = Mx +c$$ where $M \\in R^{n \\times n}$ and $c ∈ R^n.$\n",
@@ -204,14 +204,14 @@
       "source": [
         "## Jacobi iteration\n",
         "\n",
-        "One variant of preconditioned Richardson iteration is using the Jacobi preconditioner. Here we use the matrix $$\n",
+        "One variant of preconditioned Richardson iteration is using the Jacobi preconditioner (Methods in Computational Science, p.150). Here we use the matrix $$\n",
         "B = D^{-1},\n",
         "$$\n",
         "where $D$ is the diagonal matrix created by taking the diagonal from A, and $\\alpha = 1 $.\n",
         "\n",
         "The Jacobi iteration is guaranteed to converge if A is diagonally dominant, that is if the diagonal element on each row is at least as big as the sum of the rest of the elements on that row.\n",
         "\n",
-        "An alternative way to formulate Jacobi iteration is by matrix splitting. In this case, we spltit $A$ into two parts by $$\n",
+        "An alternative way to formulate Jacobi iteration is by matrix splitting (Methods in Computational Science, p.151). In this case, we spltit $A$ into two parts by $$\n",
         "A = A_1 + A_2 = D + (A-D)\n",
         "$$\n",
         "where D is as above. We then get $$\n",
@@ -268,14 +268,14 @@
     {
       "cell_type": "code",
       "source": [
-        "## Jacobi iteration\n",
+        "## Jacobi iteration, partly based on Algorithm 7.1 (Richardson iteration), p.149, Methods in Computational Science\n",
         "\n",
         "# Input: Matrix A, vector b\n",
-        "# Output: Vector x\n",
+        "# Output: Vector x so that Ax = b\n",
         "\n",
         "def jacobi_iteration(A,b):\n",
         "  x = np.zeros(b.shape)\n",
-        "  tolerance = 10**(-16)\n",
+        "  tolerance = 10**(-16) # tolerance of algorithm\n",
         "\n",
         "  D_inv = diag_inverse(A)\n",
         "\n",
@@ -314,7 +314,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Another iterative method based on Richardsson iteration is Gauss Seidel iteration (REF). Similarly to Jacobi iteration, this method can be seen as a version of preconditioned Richardson iteration. Here, we do an incomplete LU-factorisation, so that $$\n",
+        "Another iterative method based on Richardsson iteration is Gauss Seidel iteration (Methods in Computational Science, p.151). Similarly to Jacobi iteration, this method can be seen as a version of preconditioned Richardson iteration. Here, we do an incomplete LU-factorisation, so that $$\n",
         "A \\approx LU.\n",
         "$$\n",
         "Then, we can precondition the system with $$\n",
@@ -322,7 +322,7 @@
         "$$\n",
         "and use $\\alpha = 1$ to improve the rate of convergence as before.\n",
         "\n",
-        "As before, we can also view the Gauss Seidel iteration as the splitting $$\n",
+        "As before, we can also view the Gauss Seidel iteration as the splitting (Methods in Computational Science, p.152) $$\n",
         "A = A_1 + A_2 = L + (A-L).\n",
         "$$\n",
         "Then, we get the matrix $$\n",
@@ -417,10 +417,10 @@
     {
       "cell_type": "code",
       "source": [
-        "## Gauss Seidel iteration\n",
+        "## Gauss Seidel iteration, partly based on Algorithm 7.1 (Richardson iteration), p.149, Methods in Computational Science\n",
         "\n",
         "# Input: Matrix A, vector b\n",
-        "# Output: Vector x\n",
+        "# Output: Vector x so that Ax=b\n",
         "\n",
         "def gauss_seidel_iteration(A,b):\n",
         "  x = np.zeros(b.shape)\n",
@@ -466,7 +466,7 @@
         "To solve a scalar non-linear equation $$\n",
         "f(x) = 0,\n",
         "$$\n",
-        "one methods can be used is Newton's method. (ref)\n",
+        "one methods can be used is Newton's method. (Methods in Computational Science, p. 174)\n",
         "\n",
         "Newtons method is a fixed point method. A general fixed point iteration can be written as  $$\n",
         "x^{(k+1)} = g(x^{(k)}) = x^{(k)} + \\alpha f(x^{(k+1)}).\n",
@@ -487,7 +487,7 @@
     {
       "cell_type": "code",
       "source": [
-        "## Newtons method, ref\n",
+        "## Newtons method, based on Algorithm 8.2, p.174, Methods in Computational Science\n",
         "\n",
         "# Input: Function f, starting guess x0\n",
         "# Output: Approximate root x\n",
@@ -612,7 +612,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "By loking at the numerical result, we can see that the residual goes to 0. We can also see that the difference between the exact and nummerical solution is smaller than the tolerance level of the algorithm, and is very close to 0."
+        "By loking at the numerical result, we can see that the residual goes to 0. We can also see that the difference between the exact and numerical solution is smaller than the tolerance level of the algorithm, and is very close to 0."
       ],
       "metadata": {
         "id": "4l6oHRpSpZuv"
@@ -833,7 +833,7 @@
         "id": "6bcsDSoRXHZe"
       },
       "source": [
-        "All three of the methods behaved as expected. They all converged to the exact solution. Also, depending on the tolerance set, the computed result was coloser or further away from the exact solution. We can also see that Newton's method converged quicker than the other methods, which is expected since the method has a quadratic rate of convergence."
+        "All three of the methods behaved as expected. They all converged to the exact solution. Also, depending on the tolerance set, the computed result was closer or further away from the exact solution. We can also see that Newton's method converged quicker than the other methods, which is expected since the method has a quadratic rate of convergence."
       ]
     }
   ]
