work in progress

--- a/Lab3/Widen00_lab3.ipynb
+++ b/Lab3/Widen00_lab3.ipynb
@@ -4,7 +4,6 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPWQFJRpCNCaddoaSAHGSjz",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -170,15 +169,6 @@
         "    lambdax = (x- x_k_m1)/h_k\n",
         "  return lambdax\n",
         "\n",
-        "#Continious global basis Vh\n",
-        "def phi(x, k):\n",
-        "  if k == 1:\n",
-        "    phix = lin_lagrange_pol\n",
-        "\n",
-        "\n",
-        "  return phix\n",
-        "\n",
-        "\n",
         "def assembly_system(f, A, b)\n",
         "  for k in range(0, no_elements):\n",
         "    q = get_no_local_shape_functions(k)\n",
@@ -193,9 +183,7 @@
         "\n",
         "x_n = 1\n",
         "interval = 0.1\n",
-        "mesh = np.arange(0 ,x_n+interval, interval)\n",
-        "print(mesh)\n",
-        "print(f(4))\n"
+        "mesh = np.arange(0 ,x_n+interval, interval)\n"
       ],
       "metadata": {
         "colab": {
