--- a/Lab3/Widen00_lab3.ipynb
+++ b/Lab3/Widen00_lab3.ipynb
@@ -169,21 +169,55 @@
         "    lambdax = (x- x_k_m1)/h_k\n",
         "  return lambdax\n",
         "\n",
+        "def get_no_local_shape_functions(k):\n",
+        "  #since we have a linear basis V this is 2 for all elements\n",
+        "  q = 2\n",
+        "  return q\n",
+        "\n",
+        "def get_local_to_global_map(k):\n",
+        "\n",
+        "  return\n",
+        "\n",
+        "def integrate_vector(f, k, i):\n",
+        "\n",
+        "  return bi\n",
+        "\n",
+        "def integrate_matrix(k, i, j):\n",
+        "  #For constant mesh distance hk is the same for all\n",
+        "  hk = 0.1\n",
+        "  if i == j:\n",
+        "    aij = hk/3\n",
+        "  else:\n",
+        "    aij = hk/6\n",
+        "  return aij\n",
+        "\n",
+        "#From algorithm 9.2\n",
         "def assembly_system(f, A, b)\n",
+        "  no_elements = len(b) - 1\n",
         "  for k in range(0, no_elements):\n",
         "    q = get_no_local_shape_functions(k)\n",
         "    loc2glob = get_local_to_global_map(k)\n",
-        "    for i in range(0, q)\n",
+        "    for i in range(0, q):\n",
         "      b_k[i] = integrate_vector(f, k, i)\n",
-        "      for j in range(0, q)\n",
+        "      for j in range(0, q):\n",
         "        a_k[i, j] = integrate_matrix(k, i, j)\n",
         "    add_to_global_vector(b, b_k, loc2glob)\n",
         "    add_to_global_matrix(A, a_k, loc2glob)\n",
         "  return A, b\n",
         "\n",
+        "def l2_to_pw(f, mesh):\n",
+        "  A = np.zeros((len(mesh), len(mesh)))\n",
+        "  b = np.zeros(len(mesh))\n",
+        "\n",
+        "  A, b = assembly_system(f, A, b)\n",
+        "  return l2_to_pw\n",
+        "\n",
+        "\n",
         "x_n = 1\n",
         "interval = 0.1\n",
-        "mesh = np.arange(0 ,x_n+interval, interval)\n"
+        "mesh = np.arange(0 ,x_n+interval, interval)\n",
+        "\n",
+        "f_approx = l2_to_pw(f, mesh)\n"
       ],
       "metadata": {
         "colab": {
