--- a/Lab3/Widen00_lab3.ipynb
+++ b/Lab3/Widen00_lab3.ipynb
@@ -161,7 +161,7 @@
         "\n",
         "#Reference function\n",
         "def f(x):\n",
-        "  fx = x**2\n",
+        "  fx = x**3\n",
         "  return fx\n",
         "\n",
         "#Input x, interval nr k, mesh and if it is the 0 or 1 polynomial in nr\n",
@@ -181,8 +181,9 @@
         "  return q\n",
         "\n",
         "def get_local_to_global_map(k):\n",
-        "  A_map = np.array([[[k,k], [k,k+1]],[[k+1,k],[k+1,k+1]]])\n",
+        "  A_map = np.array([[k, k+1],[k,k+1]])\n",
         "  b_map = np.array([k,k+1])\n",
+        "  print(A_map)\n",
         "  loc2glob = loc2globmap(A_map, b_map)\n",
         "  return loc2glob\n",
         "\n",
@@ -195,7 +196,7 @@
         "\n",
         "def integrate_matrix(k, i, j):\n",
         "  #For constant mesh distance hk is the same for all\n",
-        "  hk = 0.1\n",
+        "  hk = 1\n",
         "  if i == j:\n",
         "    aij = hk/3\n",
         "  else:\n",
@@ -203,10 +204,12 @@
         "  return aij\n",
         "\n",
         "def add_to_global_vector(b, b_k, loc2glob):\n",
-        "  print(b[loc2glob.b_map[0]:loc2glob.b_map[1]])\n",
-        "  b[loc2glob.b_map[0]:loc2glob.b_map[1]] = b[loc2glob.b_map[0]:loc2glob.b_map[1]] + b_k\n",
-        "  print(b)\n",
+        "  b[loc2glob.b_map[0]:loc2glob.b_map[1]+1] = b[loc2glob.b_map[0]:loc2glob.b_map[1]+1] + b_k\n",
         "  return b\n",
+        "\n",
+        "def add_to_global_matrix(A, a_k, loc2glob):\n",
+        "  A[loc2glob.A_map[0][0]:loc2glob.A_map[0][1]+1, loc2glob.A_map[1][0]:loc2glob.A_map[1][1]+1] = A[loc2glob.A_map[0][0]:loc2glob.A_map[0][1]+1, loc2glob.A_map[1][0]:loc2glob.A_map[1][1]+1] + a_k\n",
+        "  return A\n",
         "\n",
         "#From algorithm 9.2\n",
         "def assembly_system(f, A, b, mesh):\n",
@@ -220,10 +223,10 @@
         "      b_k[i] = integrate_vector(f, k, i, mesh)\n",
         "      for j in range(0, q):\n",
         "        a_k[i, j] = integrate_matrix(k, i, j)\n",
-        "    print(a_k)\n",
-        "    print(b_k)\n",
         "    b = add_to_global_vector(b, b_k, loc2glob)\n",
-        "    #A = add_to_global_matrix(A, a_k, loc2glob)\n",
+        "    print(b)\n",
+        "    A = add_to_global_matrix(A, a_k, loc2glob)\n",
+        "    print(A)\n",
         "  return A, b\n",
         "\n",
         "def l2_to_pw(f, mesh):\n",
@@ -234,44 +237,57 @@
         "  return l2_to_pw\n",
         "\n",
         "\n",
-        "x_n = 1\n",
-        "interval = 0.1\n",
+        "x_n = 4\n",
+        "interval = 1\n",
         "mesh = np.arange(0 ,x_n+interval, interval)\n",
         "\n",
         "f_approx = l2_to_pw(f, mesh)\n"
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 442
+          "base_uri": "https://localhost:8080/"
         },
         "id": "HkNWmJ-kzyfa",
-        "outputId": "179affd3-d6f7-45a1-8c77-1166a791fe1d"
+        "outputId": "391b491f-af3e-4759-fdd5-5c43b706348a"
       },
-      "execution_count": 13,
+      "execution_count": 35,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "[[0.03333333 0.01666667]\n",
-            " [0.01666667 0.03333333]]\n",
-            "[0.     0.0005]\n",
-            "[0.]\n"
-          ]
-        },
-        {
-          "output_type": "error",
-          "ename": "ValueError",
-          "evalue": "could not broadcast input array from shape (2,) into shape (1,)",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-13-5faad530b6c0>\u001b[0m in \u001b[0;36m<cell line: 88>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     86\u001b[0m \u001b[0mmesh\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0marange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m0\u001b[0m \u001b[0;34m,\u001b[0m\u001b[0mx_n\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0minterval\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0minterval\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     87\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 88\u001b[0;31m \u001b[0mf_approx\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0ml2_to_pw\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mf\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmesh\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-            "\u001b[0;32m<ipython-input-13-5faad530b6c0>\u001b[0m in \u001b[0;36ml2_to_pw\u001b[0;34m(f, mesh)\u001b[0m\n\u001b[1;32m     78\u001b[0m   \u001b[0mb\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mzeros\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmesh\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     79\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 80\u001b[0;31m   \u001b[0mA\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mb\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0massembly_system\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mf\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mA\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mb\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmesh\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     81\u001b[0m   \u001b[0;32mreturn\u001b[0m \u001b[0ml2_to_pw\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     82\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m<ipython-input-13-5faad530b6c0>\u001b[0m in \u001b[0;36massembly_system\u001b[0;34m(f, A, b, mesh)\u001b[0m\n\u001b[1;32m     70\u001b[0m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0ma_k\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     71\u001b[0m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mb_k\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 72\u001b[0;31m     \u001b[0mb\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0madd_to_global_vector\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mb\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mb_k\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mloc2glob\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     73\u001b[0m     \u001b[0;31m#A = add_to_global_matrix(A, a_k, loc2glob)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     74\u001b[0m   \u001b[0;32mreturn\u001b[0m \u001b[0mA\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mb\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m<ipython-input-13-5faad530b6c0>\u001b[0m in \u001b[0;36madd_to_global_vector\u001b[0;34m(b, b_k, loc2glob)\u001b[0m\n\u001b[1;32m     52\u001b[0m \u001b[0;32mdef\u001b[0m \u001b[0madd_to_global_vector\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mb\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mb_k\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mloc2glob\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     53\u001b[0m   \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mb\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mloc2glob\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mb_map\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0mloc2glob\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mb_map\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 54\u001b[0;31m   \u001b[0mb\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mloc2glob\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mb_map\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0mloc2glob\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mb_map\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mb\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mloc2glob\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mb_map\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0mloc2glob\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mb_map\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0mb_k\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     55\u001b[0m   \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mb\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     56\u001b[0m   \u001b[0;32mreturn\u001b[0m \u001b[0mb\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mValueError\u001b[0m: could not broadcast input array from shape (2,) into shape (1,)"
+            "[[0 1]\n",
+            " [0 1]]\n",
+            "[0.  0.5 0.  0.  0. ]\n",
+            "[[0.33333333 0.16666667 0.         0.         0.        ]\n",
+            " [0.16666667 0.33333333 0.         0.         0.        ]\n",
+            " [0.         0.         0.         0.         0.        ]\n",
+            " [0.         0.         0.         0.         0.        ]\n",
+            " [0.         0.         0.         0.         0.        ]]\n",
+            "[[1 2]\n",
+            " [1 2]]\n",
+            "[0. 1. 4. 0. 0.]\n",
+            "[[0.33333333 0.16666667 0.         0.         0.        ]\n",
+            " [0.16666667 0.66666667 0.16666667 0.         0.        ]\n",
+            " [0.         0.16666667 0.33333333 0.         0.        ]\n",
+            " [0.         0.         0.         0.         0.        ]\n",
+            " [0.         0.         0.         0.         0.        ]]\n",
+            "[[2 3]\n",
+            " [2 3]]\n",
+            "[ 0.   1.   8.  13.5  0. ]\n",
+            "[[0.33333333 0.16666667 0.         0.         0.        ]\n",
+            " [0.16666667 0.66666667 0.16666667 0.         0.        ]\n",
+            " [0.         0.16666667 0.66666667 0.16666667 0.        ]\n",
+            " [0.         0.         0.16666667 0.33333333 0.        ]\n",
+            " [0.         0.         0.         0.         0.        ]]\n",
+            "[[3 4]\n",
+            " [3 4]]\n",
+            "[ 0.  1.  8. 27. 32.]\n",
+            "[[0.33333333 0.16666667 0.         0.         0.        ]\n",
+            " [0.16666667 0.66666667 0.16666667 0.         0.        ]\n",
+            " [0.         0.16666667 0.66666667 0.16666667 0.        ]\n",
+            " [0.         0.         0.16666667 0.66666667 0.16666667]\n",
+            " [0.         0.         0.         0.16666667 0.33333333]]\n"
           ]
         }
       ]
