changed color of graphs

--- a/Lab3/ivan-private_lab3.ipynb
+++ b/Lab3/ivan-private_lab3.ipynb
@@ -390,8 +390,8 @@
     "    mesh = np.linspace(0, 2 * np.pi, nodes)\n",
     "    l2_proj = l2_projection_1D(f, mesh)\n",
     "    \n",
-    "    plt.plot(f_domain, f(f_domain),\"r\", label=f\"f(x)\")\n",
-    "    plt.plot(mesh, l2_proj, \":y\",label=\"L2 projection\")\n",
+    "    plt.plot(f_domain, f(f_domain),\"y\", label=f\"f(x)\")\n",
+    "    plt.plot(mesh, l2_proj, \":b\",label=\"L2 projection\")\n",
     "    \n",
     "    plt.xlabel(\"x\")\n",
     "    plt.ylabel(\"y\")\n",
