Add more abstract content

--- a/Lab4/lab_4.ipynb
+++ b/Lab4/lab_4.ipynb
@@ -41,7 +41,7 @@
         "* 3-point edge midpoint quadrature\n",
         "* Monte Carlo quadrature\n",
         "\n",
-        "Short summary of the lab report. State the objectives, methods used, main results and conlusions."
+        "The integration methods are then verified by testing"
       ]
     },
     {
