Assignment 1 and 2 done

--- a/Widen00_lab4.ipynb
+++ b/Widen00_lab4.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNv+NktqHwNBgbxUe4tLeW+",
+      "authorship_tag": "ABX9TyNDo0goz2bfd/aW9h03zFt9",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -38,7 +38,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 2,
       "metadata": {
         "id": "ALF6tfnWvG-I"
       },
@@ -105,21 +105,21 @@
         "#Assignment 1\n",
         "\n",
         "class func:\n",
-        "  def __init__(self, x):\n",
+        "  def __init__(self):\n",
         "    self.c = [1, 1, 1, 1]\n",
-        "    self.fx = self.f(x)\n",
-        "    self.Fx = self.F(X)\n",
+        "    self.fx = self.f\n",
+        "    self.Fx = self.F\n",
         "\n",
         "  def f(self, x):\n",
         "    c = self.c\n",
-        "    fx = c[0]*x^3 + c[1]*x^2 + c[2]*x + c[3]\n",
+        "    fx = c[0]*(x**3) + c[1]*(x**2) + c[2]*x + c[3]\n",
+        "    return fx\n",
         "\n",
-        "\n",
+        "  #Without integration constant\n",
         "  def F(self, x):\n",
         "    c = self.c\n",
-        "    Fx =(c[0]/4)*x^4 + (c[1]/3)*x^3 + (c[2]/2)*x^2 + c[3]*x\n",
-        "\n",
-        "\n",
+        "    Fx =(c[0]/4)*(x**4) + (c[1]/3)*(x**3) + (c[2]/2)*(x**2) + c[3]*x\n",
+        "    return Fx\n",
         "\n",
         "def two_point_gauss(f):\n",
         "  w0 = 1/2\n",
@@ -127,31 +127,109 @@
         "  x0 = (1/2)*(1/np.sqrt(3) + 1)\n",
         "  x1 = (1/2)*(-1/np.sqrt(3) + 1)\n",
         "\n",
-        "  fx_g = 0\n",
+        "  fx_g = w0 * f(x0) + w1 * f(x1)\n",
         "  return fx_g\n",
         "\n",
-        "print(func.)\n",
+        "f = func().fx\n",
+        "F = func().Fx\n",
+        "two_point = two_point_gauss(f)\n",
+        "exact_two_point = F(1) - F(0)\n",
+        "\n",
+        "print(two_point)\n",
+        "print(exact_two_point)\n",
+        "\n",
+        "diff = abs(two_point - exact_two_point)\n",
+        "print(diff)\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "rRCdPdwawQCC",
+        "outputId": "9ccd8304-27cb-458b-e7ae-b75d416e3b83"
+      },
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "2.083333333333333\n",
+            "2.083333333333333\n",
+            "0.0\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Assignment 2\n",
+        "\n",
+        "class func:\n",
+        "  def __init__(self):\n",
+        "    self.c = [1, 1, 1, 1, 1, 1]\n",
+        "    self.fxy = self.f\n",
+        "    self.Fxy = self.F\n",
+        "\n",
+        "  def f(self, x, y):\n",
+        "    c = self.c\n",
+        "    fxy = c[0]*(x**2) + c[1]*(y**2) + c[2]*x*y + c[3]*x + c[4]*y + c[5]\n",
+        "    return fxy\n",
+        "\n",
+        "  #Without integration constant, over reference triangle area. Parametrized accordingly\n",
+        "  def F(self, x):\n",
+        "    c = self.c\n",
+        "    A = c[0] * (x**3 / 3 - x**4 / 4)\n",
+        "    B = c[1] * (x / 3 - x**2 / 2 + x**3 / 3 - x**4 / 12)\n",
+        "    C = c[2] * (x**2 / 4 - x**3 / 3 + x**4 / 8)\n",
+        "    D = c[3] * (x**2 / 2 - x**3 / 3)\n",
+        "    E = (c[4]/2) * (x - x**2 + x**3 / 3)\n",
+        "    F = c[5] * (x - x**2 / 2)\n",
+        "    Fxy =  A + B + C + D + E + F\n",
+        "    return Fxy\n",
+        "\n",
+        "\n",
+        "def three_point_edge(f):\n",
+        "  w0 = 1/6\n",
+        "  w1 = w0\n",
+        "  w2 = w0\n",
+        "  v0 = [1/2, 0]\n",
+        "  v1 = [0, 1/2]\n",
+        "  v2 = [1/2, 1/2]\n",
+        "  fxy_tp = (w0 * f(v0[0], v0[1])) + (w1 * f(v1[0], v1[1])) + (w2 * f(v2[0], v2[1]))\n",
+        "\n",
+        "  return fxy_tp\n",
+        "\n",
+        "f = func().fxy\n",
+        "F = func().Fxy\n",
+        "\n",
+        "three_point = three_point_edge(f)\n",
+        "exact_three_point = F(1) - F(0)\n",
+        "\n",
+        "print(three_point)\n",
+        "print(exact_three_point)\n",
+        "\n",
+        "diff = abs(three_point - exact_three_point)\n",
+        "print(diff)\n",
         "\n"
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 193
+          "base_uri": "https://localhost:8080/"
         },
-        "id": "rRCdPdwawQCC",
-        "outputId": "a9d9a664-1708-41b9-8978-3bb2f14f4be9"
+        "id": "ex0DnRjqrO_z",
+        "outputId": "4a708e8c-7d88-4833-9028-c3d16e122d2a"
       },
-      "execution_count": 10,
+      "execution_count": 13,
       "outputs": [
         {
-          "output_type": "error",
-          "ename": "TypeError",
-          "evalue": "func.f() missing 1 required positional argument: 'x'",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-10-e7fa1af7b44a>\u001b[0m in \u001b[0;36m<cell line: 27>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     25\u001b[0m   \u001b[0;32mreturn\u001b[0m \u001b[0mfx_g\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     26\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 27\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfunc\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mf\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     28\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mTypeError\u001b[0m: func.f() missing 1 required positional argument: 'x'"
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "1.0416666666666665\n",
+            "1.0416666666666665\n",
+            "0.0\n"
           ]
         }
       ]
