Assignment 1 done. Assignment 2 not done

--- a/Lab5/Widen00_lab5.ipynb
+++ b/Lab5/Widen00_lab5.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPxmbDGc1btE2I972faoydF",
+      "authorship_tag": "ABX9TyMrzpFRtXcB+PZtO9or45jH",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -102,7 +102,7 @@
       "metadata": {
         "id": "JMsxJl__AfEi"
       },
-      "execution_count": 72,
+      "execution_count": 1,
       "outputs": []
     },
     {
@@ -118,6 +118,10 @@
       "cell_type": "markdown",
       "source": [
         "Numbered algorithms, equations and chapter references used in this report is from the DD2363 course book Methods in Computational Science by Johan Hoffman if not stated otherwise.\n",
+        "\n",
+        "It is claimed by many that differential equations was invented by Isaac Newton when he invented [calculus](https://en.wikipedia.org/wiki/Differential_equation). With these new tools the movement of particles in time could be formulated which sparked a revolution in the understanding of planetary motion.\n",
+        "\n",
+        "Today differential equations are used to describe properties of increasingly complex systems. With the introduction of numerical treatment of differential equations this can be implemented into finite element methods and large systems of differential equations can easily be calculated. In this assignment the fundamentals of differential equations will be investigated numerically.\n",
         "\n",
         "This will be done by solving the following assignments:\n",
         "\n",
@@ -150,7 +154,10 @@
       "cell_type": "markdown",
       "source": [
         "**Assignment 1**\n",
-        "\n"
+        "\n",
+        "This assignment is utilizing the explicit euler method by setting $\\theta=1$ in the $\\theta$-method. This method is useful as it is quite easy to highlight its behavior regarding accuracy and stability. The parameter $p$ is called $\\lambda$ with the meaning as in in the model equation $\\dot u = \\lambda u$.\n",
+        "\n",
+        "This algorithm is based on algorithm 13.3 combined with algorithm 8.2."
       ],
       "metadata": {
         "id": "2oZFAtBrIH7V"
@@ -160,6 +167,8 @@
       "cell_type": "code",
       "source": [
         "#Assignment 1\n",
+        "\n",
+        "#Class that saves general parameters in the method that is used by many functions\n",
         "class Par:\n",
         "  def __init__(self, u0, t0, k, theta, f, p, T):\n",
         "    self.u0 = u0\n",
@@ -174,6 +183,7 @@
         "  f = p * u\n",
         "  return f\n",
         "\n",
+        "#Based on algorithm 8.2\n",
         "def newtons_method(fu, u0, t, par):\n",
         "  u = u0\n",
         "  TOL = 10**-3\n",
@@ -182,10 +192,12 @@
         "    u = u - (fu(u, t, par)/df)\n",
         "  return u\n",
         "\n",
+        "#Making the input to the newton method into inputtable function\n",
         "def theta_func(u, t, par):\n",
         "  f = u - par.u0 - par.k*((1-par.theta)*par.f(u, t, par.p) + par.theta*par.f(par.u0, par.t0, par.p))\n",
         "  return f\n",
         "\n",
+        "#Based on algorithm 13.3\n",
         "def scalar_time(T, f, u0, k):\n",
         "  t0 = 0\n",
         "  t = t0\n",
@@ -203,9 +215,159 @@
         "    u_vec[i] = u\n",
         "    #print(t)\n",
         "    i += 1\n",
+        "  return u_vec, par"
+      ],
+      "metadata": {
+        "id": "XLuxl9rurcZY"
+      },
+      "execution_count": 2,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Assignment 2**\n",
+        "\n",
+        "*TODO* DO NOT RUN THIS SEGMENT"
+      ],
+      "metadata": {
+        "id": "3dsDfQ96H_2g"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Assignment 2 TODO\n",
+        "\n",
+        "class Par:\n",
+        "  def __init__(self, u0, t0, k, theta, f, p, T):\n",
+        "    self.u0 = u0\n",
+        "    self.t0 = t0\n",
+        "    self.k = k\n",
+        "    self.theta = theta\n",
+        "    self.f = f\n",
+        "    self.p = p\n",
+        "    self.T = T\n",
+        "\n",
+        "def fun(u, t, p, j):\n",
+        "  f = p[j][0] * u[0] + p[j][1] * u[1]\n",
+        "  return f\n",
+        "\n",
+        "def deriv_fun(u, t, p, j):\n",
+        "  df = 1 - par.k*(1-par.theta)*(p[j][j])\n",
+        "  return df\n",
+        "\n",
+        "def newtons_method(fu, u0, t, par, j):\n",
+        "  u = u0\n",
+        "  TOL = 10**-2\n",
+        "  while abs(fu(u, t, par, j)) > TOL:\n",
+        "    df = deriv_fun(u, t, par.p, j)\n",
+        "    u[j] = u[j] - (fu(u, t, par, j)/df)\n",
+        "  return u[j]\n",
+        "\n",
+        "def theta_func(u, t, par, j):\n",
+        "  f = u[j] - par.u0[j] - par.k*((1-par.theta)*par.f(u, t, par.p, j) + par.theta*par.f(par.u0, par.t0, par.p, j))\n",
+        "  return f\n",
+        "\n",
+        "def system_time(T, f, u0, k):\n",
+        "  t0 = 0\n",
+        "  t = t0\n",
+        "  dec = int(-1*np.log10(k))\n",
+        "  p = np.array([[0, 1],[-1, 0]])\n",
+        "  theta = 1   #0.5=trap, 1=expl, eul, 0=impl, eul\n",
+        "  par = Par(u0, t0, k, theta, f, p, T)\n",
+        "  u_vec = np.zeros((int(T/k)+1, 2))\n",
+        "  u_vec[0] = u0\n",
+        "  i = 1\n",
+        "  u = np.zeros(2)\n",
+        "  while t < T:\n",
+        "    for j in range(0, 2):\n",
+        "      u[j] = newtons_method(theta_func, u0, t, par, j)\n",
+        "      par.u0[j] = u[j]\n",
+        "    t = round(t + k, dec+1)\n",
+        "    u_vec[i] = u\n",
+        "    i += 1\n",
         "  return u_vec, par\n",
         "\n",
         "\n",
+        "#p is lambda in the course material\n",
+        "k_vec = [0.01, 0.1, 5]\n",
+        "\n",
+        "T = 10\n",
+        "u0 = [0, 1];\n",
+        "u_vec, par = system_time(T, fun, u0, k_vec[1])\n",
+        "print(u_vec)\n",
+        "\n",
+        "\n",
+        "\"\"\"\n",
+        "for j in range(len(k_vec)):\n",
+        "  T = 100\n",
+        "  u0 = [1, 1];\n",
+        "  u_vec, par = system_time(T, fun, u0, k_vec[j])\n",
+        "\n",
+        "  #Stability for explicit euler\n",
+        "  stab_crit = abs(-1 - k_vec[j]*par.p)\n",
+        "\n",
+        "  t_vec = np.arange(par.t0, par.T + par.k, par.k)\n",
+        "\n",
+        "  exact_sol_vec = np.zeros(len(t_vec))\n",
+        "  for i in range(len(t_vec)):\n",
+        "    exact_sol_vec[i] = float(u0 * np.exp(par.p*t_vec[i]))\n",
+        "\n",
+        "  error = np.abs(exact_sol_vec - u_vec)\n",
+        "\n",
+        "  plt.figure(i)\n",
+        "  plt.figure(figsize=(12,6))\n",
+        "  plt.subplot(121)\n",
+        "  plt.loglog(t_vec, u_vec)\n",
+        "  plt.xlabel(\"Time\")\n",
+        "  plt.ylabel(\"u(t)\")\n",
+        "  plt.title(\"Solution of the model problem: $k = $\" + str(k_vec[j]) + \" and $\\lambda$ = \" + str(par.p))\n",
+        "  plt.subplot(122)\n",
+        "  plt.semilogy(t_vec, error)\n",
+        "  plt.xlabel(\"Time\")\n",
+        "  plt.ylabel(\"Error\")\n",
+        "  plt.title(\"Stability criteria $|-1 - k\\lambda| = $\" + str(stab_crit))\n",
+        "  plt.show()\n",
+        "\"\"\"\n"
+      ],
+      "metadata": {
+        "id": "3dauZf_ttrIy",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 356
+        },
+        "outputId": "4053c93f-8ab9-48e8-9ece-9b24e47a720c"
+      },
+      "execution_count": 37,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "KeyboardInterrupt",
+          "evalue": "",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-37-4bc177001466>\u001b[0m in \u001b[0;36m<cell line: 59>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     57\u001b[0m \u001b[0mT\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m10\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     58\u001b[0m \u001b[0mu0\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m;\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 59\u001b[0;31m \u001b[0mu_vec\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mpar\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0msystem_time\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mT\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfun\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mu0\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mk_vec\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     60\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mu_vec\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     61\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m<ipython-input-37-4bc177001466>\u001b[0m in \u001b[0;36msystem_time\u001b[0;34m(T, f, u0, k)\u001b[0m\n\u001b[1;32m     44\u001b[0m   \u001b[0;32mwhile\u001b[0m \u001b[0mt\u001b[0m \u001b[0;34m<\u001b[0m \u001b[0mT\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     45\u001b[0m     \u001b[0;32mfor\u001b[0m \u001b[0mj\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m2\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 46\u001b[0;31m       \u001b[0mu\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mj\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnewtons_method\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtheta_func\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mu0\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mt\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mpar\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mj\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     47\u001b[0m       \u001b[0mpar\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mu0\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mj\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mu\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mj\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     48\u001b[0m     \u001b[0mt\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mround\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mt\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0mk\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdec\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m<ipython-input-37-4bc177001466>\u001b[0m in \u001b[0;36mnewtons_method\u001b[0;34m(fu, u0, t, par, j)\u001b[0m\n\u001b[1;32m     22\u001b[0m   \u001b[0mu\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mu0\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     23\u001b[0m   \u001b[0mTOL\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m10\u001b[0m\u001b[0;34m**\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 24\u001b[0;31m   \u001b[0;32mwhile\u001b[0m \u001b[0mabs\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfu\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mu\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mt\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mpar\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mj\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m>\u001b[0m \u001b[0mTOL\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     25\u001b[0m     \u001b[0mdf\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mderiv_fun\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mu\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mt\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mpar\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mp\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mj\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     26\u001b[0m     \u001b[0mu\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mj\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mu\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mj\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m-\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mfu\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mu\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mt\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mpar\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mj\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m/\u001b[0m\u001b[0mdf\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# **Results**"
+      ],
+      "metadata": {
+        "id": "39KmrT0urZAD"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "#p is lambda in the course material\n",
         "k_vec = [0.01, 0.1, 5]\n",
         "\n",
@@ -237,17 +399,17 @@
         "  plt.xlabel(\"Time\")\n",
         "  plt.ylabel(\"Error\")\n",
         "  plt.title(\"Stability criteria $|-1 - k\\lambda| = $\" + str(stab_crit))\n",
-        "  plt.show()\n"
+        "  plt.show()"
       ],
       "metadata": {
-        "id": "XLuxl9rurcZY",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1000
         },
-        "outputId": "c9968811-2cec-41ff-fae1-8eb2384cf94c"
+        "id": "loEQefvnra2w",
+        "outputId": "efe8c378-01dd-47ab-e9cf-67e562f5776c"
       },
-      "execution_count": 148,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "display_data",
@@ -311,126 +473,6 @@
     {
       "cell_type": "markdown",
       "source": [
-        "**Assignment 2**\n",
-        "\n",
-        "*TODO*"
-      ],
-      "metadata": {
-        "id": "3dsDfQ96H_2g"
-      }
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "#Assignment 2\n",
-        "\n",
-        "class Par:\n",
-        "  def __init__(self, u0, t0, k, theta, f, p, T):\n",
-        "    self.u0 = u0\n",
-        "    self.t0 = t0\n",
-        "    self.k = k\n",
-        "    self.theta = theta\n",
-        "    self.f = f\n",
-        "    self.p = p\n",
-        "    self.T = T\n",
-        "\n",
-        "def fun(u, t, p):\n",
-        "  f = p * u\n",
-        "  return f\n",
-        "\n",
-        "def newtons_method(fu, u0, t, par):\n",
-        "  u = u0\n",
-        "  TOL = 10**-3\n",
-        "  while abs(fu(u, t, par)) > TOL:\n",
-        "    df = 1 - par.p * par.k*(1-par.theta)\n",
-        "    u = u - (fu(u, t, par)/df)\n",
-        "  return u\n",
-        "\n",
-        "def theta_func(u, t, par):\n",
-        "  f = u - par.u0 - par.k*((1-par.theta)*par.f(u, t, par.p) + par.theta*par.f(par.u0, par.t0, par.p))\n",
-        "  return f\n",
-        "\n",
-        "def system_time(T, f, u0, k):\n",
-        "  t0 = 0\n",
-        "  t = t0\n",
-        "  dec = int(-1*np.log10(k))\n",
-        "  p = np.array[[0, 1],[-1, 0]]\n",
-        "  theta = 1   #0.5=trap, 1=expl, eul, 0=impl, eul\n",
-        "  par = Par(u0, t0, k, theta, f, p, T)\n",
-        "  u_vec = np.zeros(int(T/k)+1)\n",
-        "  u_vec[0] = u0\n",
-        "  i = 1\n",
-        "  while t < T:\n",
-        "    u = newtons_method(theta_func, u0, t, par)\n",
-        "    par.u0 = u\n",
-        "    t = round(t + k, dec+1)\n",
-        "    u_vec[i] = u\n",
-        "    #print(t)\n",
-        "    i += 1\n",
-        "  return u_vec, par\n",
-        "\n",
-        "\n",
-        "#p is lambda in the course material\n",
-        "k_vec = [0.01, 0.1, 5]\n",
-        "\n",
-        "for j in range(len(k_vec)):\n",
-        "  T = 100\n",
-        "  u0 = [1, 1];\n",
-        "  u_vec, par = system_time(T, fun, u0, k_vec[j])\n",
-        "\n",
-        "  #Stability for explicit euler\n",
-        "  stab_crit = abs(-1 - k_vec[j]*par.p)\n",
-        "\n",
-        "  t_vec = np.arange(par.t0, par.T + par.k, par.k)\n",
-        "\n",
-        "  exact_sol_vec = np.zeros(len(t_vec))\n",
-        "  for i in range(len(t_vec)):\n",
-        "    exact_sol_vec[i] = float(u0 * np.exp(par.p*t_vec[i]))\n",
-        "\n",
-        "  error = np.abs(exact_sol_vec - u_vec)\n",
-        "\n",
-        "  plt.figure(i)\n",
-        "  plt.figure(figsize=(12,6))\n",
-        "  plt.subplot(121)\n",
-        "  plt.loglog(t_vec, u_vec)\n",
-        "  plt.xlabel(\"Time\")\n",
-        "  plt.ylabel(\"u(t)\")\n",
-        "  plt.title(\"Solution of the model problem: $k = $\" + str(k_vec[j]) + \" and $\\lambda$ = \" + str(par.p))\n",
-        "  plt.subplot(122)\n",
-        "  plt.semilogy(t_vec, error)\n",
-        "  plt.xlabel(\"Time\")\n",
-        "  plt.ylabel(\"Error\")\n",
-        "  plt.title(\"Stability criteria $|-1 - k\\lambda| = $\" + str(stab_crit))\n",
-        "  plt.show()\n",
-        "\n"
-      ],
-      "metadata": {
-        "id": "3dauZf_ttrIy"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "# **Results**"
-      ],
-      "metadata": {
-        "id": "39KmrT0urZAD"
-      }
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "loEQefvnra2w"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
         "# **Discussion**"
       ],
       "metadata": {
@@ -442,7 +484,7 @@
       "source": [
         "The stability of the scalar function follows the theory in chapter 13.4 which says that the method should be stable for $|-1 - k\\lambda| < 1$. The last figure of the scalar problem shows that the method is not stable for that combination.\n",
         "\n",
-        "The accuracy of the scalar problem is scaling as expected. According to chapter 13.5 the global error should decrease with the same factor that the timestep decreases with which can be seen for the figures with $k=0.1$ and $k=0.01$."
+        "The accuracy of the scalar problem is scaling as expected. According to chapter 13.5 the global error should decrease with the same factor that the timestep decreases with. This can be seen for the figures with $k=0.1$ and $k=0.01$."
       ],
       "metadata": {
         "id": "ZJWLfbGXrdPL"
